fix mobile parent text overflow

--- a/styles.css
+++ b/styles.css
@@ -192,7 +192,11 @@ button:hover {
     margin: 0 0.5rem ;
 }
 .parent-link {
-    color: var(--color2);
+    width: 60%;
+    max-height: 55px;
+    overflow: hidden;
+    margin: auto;
+    display: block;
     color: inherit;
     padding: 0.75rem;
     animation: blink 1.5s 0.5s ease-in-out  infinite;
